--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start-web": "react-scripts start",
+    "start-web": "react-app-rewired start",
     "start-native": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -9,17 +9,21 @@
   },
   "dependencies": {
     "expo": "^32.0.0",
+    "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-art": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-web": "^0.11.2",
+    "react-native-web": "0.10.0",
     "react-router-dom": "^5.0.0",
     "react-router-native": "^5.0.0",
     "react-scripts": "^2.1.8"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "babel-preset-expo": "^5.0.0",
+    "customize-cra": "^0.2.12",
+    "react-app-rewired": "^2.1.3"
   },
   "private": true,
   "browserslist": [
