--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "^32.0.0",
+    "expo-cli": "2.17.1",
     "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-art": "^16.8.6",
