--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,7 @@ services:
       context: .
       dockerfile: docker/Dockerfile
     volumes:
-      - $PWD/app:/usr/app/streamUs
-      - $PWD/app/node_modules
+      - ./app:/usr/app/streamUs
     ports:
       - 19000:19000
       - 19001:19001
