--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,4 @@ WORKDIR /usr/app/streamUs
 COPY app/ .
 RUN apt-get update -y
 RUN apt-get install git -y
-RUN npm install
-RUN npm i -g expo-cli
-CMD ["npm", "run", "devel"]
+CMD ["sh", "-c", "yarn install && yarn devel"]
