--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,8 @@
     "react-native-web": "0.10.0",
     "react-router-dom": "^5.0.0",
     "react-router-native": "^5.0.0",
-    "react-scripts": "^2.1.8"
+    "react-scripts": "^2.1.8",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
