--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,11 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "babel-preset-expo": "^5.0.0",
     "customize-cra": "^0.2.12",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "react-app-rewired": "^2.1.3"
   },
   "private": true,
