--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "react-art": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-notifications": "^1.5.0",
     "react-native-web": "0.10.0",
     "react-router-dom": "^5.0.0",
     "react-router-native": "^5.0.0",
